/* Methods */ courier methods need an ipc cookie
Levitation import of page 2646 rev 9397.

--- a/0-/Summer of Code 2011/Service Clients.mediawiki
+++ b/0-/Summer of Code 2011/Service Clients.mediawiki
@@ -188,7 +188,7 @@ The xmms_ipc_client_St struct should be extended with a new field, "id", which r
 
 This XMMS_IPC_OBJECT_COURIER would have two methods: xmms_courier_send_message and xmms_courier_reply, which are mostly compatible with nesciens' last sketch for the client-side.
 
-''xmms_courier_send_message (xmms_ipc_client_t *client, int dest, int expect_reply, xmmsv_t *payload)''
+''xmms_courier_send_message (xmms_ipc_client_t *client, int dest, int expect_reply, xmmsv_t *payload, uint32_cookie)''
 
 Formats a c2c message in the form of a dict:
 
@@ -199,19 +199,20 @@ Formats a c2c message in the form of a dict:
 "expect_reply" : expect_reply
 </pre>
 
-If the message expects a reply (i.e., expect_reply == 1), generates a unique id for the message, stores it in the dict and records this message as pending in the pool of pending messages. It is sufficient to record the message, sender and destination ids.
+If the message expects a reply (i.e., expect_reply == 1), generates a unique id for the message, stores it in the dict and records this message as pending in the pool of pending messages. It is sufficient to record the message, sender and destination ids, along with the cookie.
 
 Then looks up the destination client's xmms_ipc_client_t using its id in the list of clients kept by the IPC object, and uses xmms_ipc_client_msg_write to actually send the message to the destination client.
 
 ----
 
-''xmms_courier_reply (xmms_ipc_client_t *client, int msg_id, int expect_reply, xmmsv_t *payload)''
+''xmms_courier_reply (xmms_ipc_client_t *client, int msg_id, int expect_reply, xmmsv_t *payload, uint32 cookie)''
 
 Looks for the destination using the provided msg_id in the pool of pending messages (and, once found, removes the entry corresponding to this id). Checks if the original message was really sent to the client which is trying to answer.
 
 Proceeds similarly to send_message.
 
 In order to delegate replies to clients that call service methods until the service actually responds, thus associating a xmmsc_result_t to the result of the method call, the courrier object would need to be special-cased in process_msg in ipc.c, maybe like XMMS_IPC_OBJECT_SIGNAL currently is.
+The ipc message's cookie is passed along to both methods in process_msg so that it can be used to send back replies to clients.
 
 ==== Unresolved issues ====
 
