--- a/0-/Summer of Code 2011/Service Clients.mediawiki
+++ b/0-/Summer of Code 2011/Service Clients.mediawiki
@@ -226,5 +226,7 @@ One advantage of using broadcasts would be that the cookies associated with the 
 * ipc_servers_lock is not needed in courier.c
 * Try to move code from courier.c to ipc.c and keep the structs opaque
 * Unlocked/locked versions of store_pending?
+* Move compare_uints to xmmsutil?
 * Make ids gint32
 * Documentation!
+* Replies should have XMMS_IPC_CMD_REPLY as cmdid
