--- a/0-/Summer of Code 2011/Service Clients.mediawiki
+++ b/0-/Summer of Code 2011/Service Clients.mediawiki
@@ -219,8 +219,8 @@ The ipc message's cookie is passed along to both methods in process_msg so that 
 None right now :)
 
 == TODO ==
-* ipc_servers_lock is not needed in courier.c
-* Try to move code from courier.c to ipc.c and keep the structs opaque
+* <del>ipc_servers_lock is not needed in courier.c</del>
+* <del>Try to move code from courier.c to ipc.c and keep the structs opaque</del>
 
 [http://pastebin.com/pzuQiM1F An idea] for how to expose in ipc.c only what the courier object will really need.
 * Unlocked/locked versions of store_pending?
