--- a/0-/Summer of Code 2011/Service Clients.mediawiki
+++ b/0-/Summer of Code 2011/Service Clients.mediawiki
@@ -219,6 +219,6 @@ The ipc message's cookie is passed along to both methods in process_msg so that 
 1) How to integrate the courier in main.c?
 
 == TODO ==
-* Make the courier a xmms_object_t
-* Unlocked/locked versions of store_pending?
+* <del>Make the courier a xmms_object_t</del>
+* Cleanup in ipc.c
 * Move compare_int32 to xmmsutil?
