--- a/0-/Component:cdda.mediawiki
+++ b/0-/Component:cdda.mediawiki
@@ -4,7 +4,7 @@
 Adds support for playing CD Audio.
 =Usage=
 Browsing the cdda:// will show all valid urls for tracks on the currently inserted CD.
- $ xmms2 browse cdda://
+ $ nyxmms2 server browse cdda://
  cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/1 
  cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/2 
  cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/3 
@@ -17,17 +17,15 @@ Browsing the cdda:// will show all valid urls for tracks on the currently insert
  cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/10 
  cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/11 
 
-You can add the whole CD to the playlist with the addpls command.
- $ xmms2 addpls cdda://
- Playlist with 11 entries added
+You can add the whole CD to the playlist with the add -P command.
+ $ nyxmms2 add -P cdda://
 
 Or you can add a single song by specifying its full path from the browse.
- xmms2 add cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/8
- Added cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/8
+ $ nyxmms2 add cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/8
 
-With current -devel radd also works if you specify the CDID also
- $ xmms2 radd cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-
-Unfortunately it won't sort the entries properly at the moment.
+Or you can use * instead of track number to add whole CD in reverse order.
+
+ $ nyxmms2 add cdda://h4JxJj8jIp_HtscYOua_TZxNe9g-/*
 
 You can specify the device which the plugin should use by modifying the cdda.device config value.
 
