--- a/0-/Collections 2.0/TODO.mediawiki
+++ b/0-/Collections 2.0/TODO.mediawiki
@@ -47,7 +47,7 @@ This file is just weird.. I have a feeling it's not really needed and can be rem
 
 == src/xmms/medialib.c ==
 
-This pretty much sums it up:
+<del>This pretty much sums it up:</del>
 
  daniel@neutronstar:~/dev_home/xmms2-nano(s4-test)$ git checkout master
  Switched to branch 'master'
@@ -58,15 +58,23 @@ This pretty much sums it up:
  daniel@neutronstar:~/dev_home/xmms2-nano(s4-test)$ wc -l src/xmms/medialib.c 
  2844 src/xmms/medialib.c
 
-Almost twice the size.. the medialib_query call-graph really needs to be broken out into a separate file... or two files. One file that builds the query, and one that massages the result into the form that can be sent to the client. The following image should be re-generated to reflect the current structure, but it's not any huge changes in the code.
+<del>Almost twice the size.. the medialib_query call-graph really needs to be broken out into a separate file... or two files. One file that builds the query, and one that massages the result into the form that can be sent to the client. The following image should be re-generated to reflect the current structure, but it's not any huge changes in the code.</del>
 
 [[Image:medialib_query.png|center|700px|alt=medialib query call graph|call graph]]
 
-To break out in two files there are a couple structures currently stashed away as xmmsv bin-data (hack galore), used for aggregation functionality. I believe this can be replaced by xmmsv dicts instead which would fit much better into the code flow and reduce coupling. When doing this change, there should be performance tests available. Some performance might be ok to sacrifice for better readability, as long as it's not too much.
+<del>To break out in two files there are a couple structures currently stashed away as xmmsv bin-data (hack galore), used for aggregation functionality. I believe this can be replaced by xmmsv dicts instead which would fit much better into the code flow and reduce coupling. When doing this change, there should be performance tests available. Some performance might be ok to sacrifice for better readability, as long as it's not too much.</del>
 
-Breaking out the code into separate files will also lead to much easier overview of test coverage status. Maybe we should create a new directory in src/xmms/query or something, that can wait a bit though.
+<del>Breaking out the code into separate files will also lead to much easier overview of test coverage status. Maybe we should create a new directory in src/xmms/query or something, that can wait a bit though.</del>
 
-Strings that look like integers are stored as integers and they should not be. See xmms_medialib_entry_property_set_str_source. Should investigate if something goes wrong elsewhere if we just disable this. (Do you know, cippo?)
+<del>Strings that look like integers are stored as integers and they should not be. See xmms_medialib_entry_property_set_str_source. Should investigate if something goes wrong elsewhere if we just disable this. (Do you know, cippo?)</del>
+
+UPDATED:
+ $ wc -l src/xmms/medialib*.c
+  1469 src/xmms/medialib.c
+   799 src/xmms/medialib_query.c
+   621 src/xmms/medialib_query_result.c
+   234 src/xmms/medialib_session.c
+  3123 total
 
 == test framework ==
 
