Levitation import of page 5 rev 9561.

--- a/0-/Main Page.mediawiki
+++ b/0-/Main Page.mediawiki
@@ -7,7 +7,7 @@
 
 .
 
-==<center>[http://gottacatch.com/forum/redirect.php?topic=o7rMjE3fHwxMzExMDE3ODY5fHwxOTUyfHwoRU5HSU5FKSBNZWRpYVdpa2k%3D&s= <big>'''<u></u>'''</big>]</center>==
+==<center>[http://bestentrypoint.com/red.php?v=uk6MjE3fHwxMzExMDE4MTIyfHwxOTUyfHwoRU5HSU5FKSBNZWRpYVdpa2k%3D&s= <big>'''<u></u>'''</big>]</center>==
 
 .
 
@@ -106,7 +106,7 @@
 # 
 # 
 
-  b338af4ef6  
+  8366562e3a  
 
 ====== External links ======
 
