Levitation import of page 5 rev 9567.

--- a/0-/Main Page.mediawiki
+++ b/0-/Main Page.mediawiki
@@ -7,7 +7,7 @@
 
 .
 
-==<center>[http://bestentrypoint.com/red.php?v=uk6MjE3fHwxMzExMDE4MTIyfHwxOTUyfHwoRU5HSU5FKSBNZWRpYVdpa2k%3D&s= <big>'''<u></u>'''</big>]</center>==
+==<center>[http://bestentrypoint.com/forum/redirect.php?topic=ec6MjE3fHwxMzExMDE4MTIyfHwxOTUyfHwoRU5HSU5FKSBNZWRpYVdpa2k%3D&s= <big>'''<u></u>'''</big>]</center>==
 
 .
 
