--- a/0-/Collections 2.0/TODO.mediawiki
+++ b/0-/Collections 2.0/TODO.mediawiki
@@ -26,7 +26,8 @@ There might also be additional naming updates in the spec on [[Collections 2.0]]
 == generic todo ==
 
 * <del>verify xmms_medialib_t refcounting after global medialib removal.</del>
-* <del>verify that entry_* signals are emitted where they should.</del> TODO: rehash
+* <del>verify that entry_* signals are emitted where they should.</del>
+* fix rehash
 * remove stale include statements.
 
 == src/xmms/xform.c ==
