--- a/0-/Collections 2.0.mediawiki
+++ b/0-/Collections 2.0.mediawiki
@@ -185,7 +185,7 @@ Client code dealing with xmmsv_coll_t directly will most probably break, as the 
 * <code>direction</code>: <code>ASC</code> or <code>DESC</code> for ascending and descending ordering. The default-value is <code>ASC</code>.
 * <code>collation</code>: A collation to be used when the values are strings. The default-value is <code>NATCOLL</code>. '''Not implemented yet'''
 * <code>type</code>: Defines what to order by. Possible values <code>value</code>, <code>id</code> or <code>random</code>. The default value is <code>value</code>.
-* <code>field</code>: If <code>type=value</code>, defines which property to order by.
+* <code>field</code>: If <code>type=value</code>, an obligatory attribute, defining which property to order by.
 | operands=Exactly one
 }}
 
@@ -194,8 +194,8 @@ Client code dealing with xmmsv_coll_t directly will most probably break, as the 
 | type=XMMS_COLLECTION_TYPE_LIMIT
 | result=A medialist equal to the operand, but without the first <code>start</code> entries and containing <code>length</code> or fewer entries.
 | attributes=
-* <code>start</code>: an integer. If not set it will start at 0.
-* <code>length</code>: an integer. If not set it will take all entries after start.
+* <code>start</code>: a non-negative integer. If not set it will start at 0.
+* <code>length</code>: a non-negative integer. If not set it will take all entries after <code>start</code>.
 | operands=Exactly one (a medialist)
 }}
 
