Levitation import of page 5 rev 9592.

--- a/0-/Main Page.mediawiki
+++ b/0-/Main Page.mediawiki
@@ -33,3 +33,4 @@ __NOEDITSECTION__
 
 <div class="visualClear"></div>
 <!-- placeholder for more stuff after the 2 columns -->
+In theory I should be able to write like this too, especially on a subject which is my passion - taking time and real effort to make a good post and site... but what can I say... I procrastinate alot and never seem to get something done.Great post though, thanks for the info  [http://online.sitego.fr/ users counter en ligne gratuit] =-=
