--- a/0-/Release:DrO o.mediawiki
+++ b/0-/Release:DrO o.mediawiki
@@ -1,6 +1,10 @@
 == Release Notes ==
 
-A long overdue release, it's been delayed because we couldn't find any good DrNo references to put in the release notes, so in the end (after watching the movie a couple of times) we just release it raw and without funny references. As usual there was a lot of people involved in in getting this release out, they have our gratitude!
+A long overdue release, mostly due to the developers having more fun with the next release, DrParnassus, instead of getting this release out. DrO_o can be considered a service/polish release to DrNo, and should not contain any big surprises to the end user. On the development side there are some new nice features that we've been wanting on for a long time now. As usual there was a lot of people...
+
+Adam Nielsen, Anders Waldenborg, Anthony Garcia, Benjamin Drung, Benjamin Schmitz, Brad Jorsch, Christopher Rosell, Daniel Svensson, David Richards, Erik Massop, Fabian Roth, Frank Dischner, Frank Terbeck, Guilherme Gonçalves, Henrik Gustafsson, Hugh Davenport, Igor Byelogurov, Jan Braun, Jari Aalto, Juan Antonio Osorio, Juho Vähä-Herttua, Raphaël Bois, Rémi Vanicat, Sebastien Cevey, Sergei Trofimovich, Thomas Frauendorfer, Tilman Sauerbeck, Timo Paulssen, Tobias Hieta, Uli Franke, Yang Zhe
+
+...involved in in getting this release out, they have our gratitude! 
 
 === Upgrading ===
 
@@ -9,7 +13,10 @@ Upgrading should be smooth.
 === Noteworthy changes ===
 * Waf build system updated to version 1.6, which means Python 3.x compatibility.
 * Python bindings migrated to cython which brings Python 3.x compatibility.
-* ...more .. todo
+* Server side IPC code is now generated, thus a whole lot more consistent and less prone to errors.
+* Better support for high quality (S32) audio, together with xform updates to output such formats.
+* More format support to CoreAudio and PulseAudio letting them decide when to resample as they're probably better at it anyway.
+* A ton of man page updates so that we can hopefully answer most questions with RTFM.
 
 ==== For users ====
 
