--- a/0-/Release:DrO o.mediawiki
+++ b/0-/Release:DrO o.mediawiki
@@ -13,8 +13,8 @@ Adam Nielsen, Anders Waldenborg, Anthony Garcia, Benjamin Drung, Benjamin Schmit
 Upgrading should be smooth.
 
 === Noteworthy changes ===
-* Waf build system updated to version 1.6, which means Python 3.x compatibility.
-* Python bindings migrated to cython which brings Python 3.x compatibility.
+* Waf build system updated to version 1.6, which brings Python 3.x compatibility to the build system.
+* Python bindings migrated to cython which brings Python 3.x compatibility to Python clients.
 * Server side IPC code is now generated, thus a whole lot more consistent and less prone to errors.
 * Better support for high quality (S32) audio, together with xform updates to output such formats.
 * Don't let ALSA resample as it consumes insane amount of resources which makes it look like XMMS2 is resource heavy.
