--- a/0-/Versioning.mediawiki
+++ b/0-/Versioning.mediawiki
@@ -16,7 +16,7 @@
 * [[Release:DrMattDestruction|DrMattDestruction]] - Released 2009-04-23
 * [[Release:DrNo|DrNo]] - Released 2010-02-19
 * [[Release:DrO_o|DrO_o]] <s>DrOnline</s>
-* DrParnassus
+* DrParnassus, DrPepper (legal issues?)
 ...
 * DrStrangelove
 * DrTam?
