Levitation import of page 814 rev 9627.

--- a/0-/Features.mediawiki
+++ b/0-/Features.mediawiki
@@ -1,7 +1,2 @@
-== XMMS2 Features ==
-
-List of features currently offered by XMMS2:
-{{FeatureList}}
-
-[[Category:General]]
-[[Category:Users]]
+The subsequent are many good examples of the kind of jewelry.	http://www.uggbotasventa.com/	Magnetic earrings lookup as once the human being getting is placing on a stud.
+Stick on earrings have adhesive backs which stick for the ear lobe.	http://www.goedkoopmoncler.com/	Ear cuffs are curved metallic bands that press versus the ear.
