--- a/0-/Main Page.mediawiki
+++ b/0-/Main Page.mediawiki
@@ -1,3 +1,35 @@
- This whole body craft is reflected in lots of cultures for numerous prospects to which may possibly consist of religion,	http://www.negoziodicalzature.com/	spirituality, style or eroticism.
- regardless of the simple fact that in america whole body piercing,	http://www.sacomainvente.com/	 that is piercing whole body components other than ears,
- started out regardless of the simple fact that in the earlier 70's, but has develop to be most selected greater compared to previous 10 years.	http://www.economicoorologionegozio.com/	In america there undoubtedly are a choose celebration of individuals which have take place to appreciate the attractiveness of whole body jewelry.
+__NOTOC__
+__NOEDITSECTION__
+
+<div class="split-half">
+
+=== Get Started! ===
+[[Getting Started|Getting started]] with XMMS2 is as easy as: [[Download XMMS2|download]], [[Install instructions|install]], [[Using the application|use]]!
+
+=== XMMS2 will: ===
+* play your music.
+* manage your [[The Medialib|music library]]
+* use [[collections]] to help you organise your music as you like
+* allow you to control it using a variety of [[XMMS2 Clients|clients]].
+* [[Project Status#XMMS2_Platform_Support_Status|run]] on [[Download_XMMS2#Linux|Linux]], [[Download_XMMS2#BSD|*BSD]], [[Download_XMMS2#MacOSX|OS X]], Solaris, and [[Download_XMMS2#Windows|Windows]].
+
+<small>[[what XMMS2 will not do | XMMS2 will not...]]</small>
+=== Features ===
+{{FeatureList}}
+
+</div>
+
+<div class="split-half">
+<!-- i've got an idea.. let's replace this with a web 2.0 style jumble of irregularly sized tags! -->
+
+=== News and events ===
+<!-- placeholder for important announcements -->
+{{ShortNews}}
+
+=== [http://planet.xmms.se Planet XMMS2] ===
+<feed items="5" showdesc="false" showtitle="false">http://planet.xmms.se/rss20.xml</feed>
+[http://planet.xmms.se/rss20.xml RSS Feed]
+</div>
+
+<div class="visualClear"></div>
+<!-- placeholder for more stuff after the 2 columns -->
